# app-base

./: README.md
be/: Dockerfile  README.md  pyproject.toml
be/app/: database.py  main.py  schemas.py
be/app/models/: users.py
db/: README.md
db/migrations/: v0.0.2.sql
fe/: package-lock.json  package.json
fe/src/: App.js  Auth.js  Profile.js  login.js
